# abigail

./: .gitignore  AGENTS.md  BEFORE_BROWSER.diff  BEFORE_FINAL_CLEANUP.diff  BEFORE_VAULT_FIX.diff  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPGRADE.md  example.env  package-lock.json  rust-toolchain.toml
.github/: CODEOWNERS  (+3 more)
crates/abby-birth/: Cargo.toml
crates/abby-birth/src/: stages.rs
crates/abby-keygen/: Cargo.toml
crates/abby-keygen/src/: main.rs
crates/abby-llm/: Cargo.toml
crates/abby-llm/src/: candle.rs  lib.rs  local_http.rs  openai.rs
crates/abby-memory/: Cargo.toml
crates/abby-memory/src/: store.rs
crates/abby-senses/: Cargo.toml
crates/abby-senses/src/: imap.rs  lib.rs  smtp.rs
crates/abby-skills/: Cargo.toml
crates/abby-skills/src/: executor.rs  lib.rs  manifest.rs  registry.rs  sandbox.rs
crates/abby-skills/src/capability/: agent.rs  audio.rs  email.rs  llm.rs  memory.rs  mod.rs  video.rs
crates/abby-skills/src/channel/: mod.rs
crates/abby-skills/src/protocol/: mod.rs
crates/abby-skills/src/transport/: imap.rs  mod.rs
crates/abigail-auth/: Cargo.toml
crates/abigail-auth/src/: cache.rs  error.rs  lib.rs  manager.rs  provider.rs  types.rs  ui.rs
crates/abigail-auth/src/providers/: basic_auth.rs  mod.rs  static_token.rs
crates/abigail-birth/: Cargo.toml
crates/abigail-birth/src/: engine.rs  genesis.rs  lib.rs  persistence.rs  prompts.rs  stages.rs
crates/abigail-capabilities/: Cargo.toml
crates/abigail-capabilities/src/: agent.rs  lib.rs  memory.rs
crates/abigail-capabilities/src/cognitive/: anthropic.rs  candle.rs  catalog.rs  cli_provider.rs  download.rs  local_http.rs  mod.rs  openai.rs  openai_compatible.rs  provider.rs  types.rs  validation.rs
crates/abigail-capabilities/src/sensory/: browser.rs  file_ingestion.rs  hearing.rs  http_client.rs  mod.rs  url_security.rs  vision.rs
crates/abigail-cli/: Cargo.toml
crates/abigail-cli/src/: auth.rs  commands.rs  main.rs  server.rs  shell.rs
crates/abigail-core/: Cargo.toml
crates/abigail-core/src/: capability_envelope.rs  config.rs  constitutional.rs  document.rs  dpapi.rs  encrypted_storage.rs  global_config.rs  key_detection.rs  keyring.rs  lib.rs  ops.rs  path_guard.rs  sao_bridge.rs  secrets.rs  secure_fs.rs  structured_failure.rs  superego.rs  system_prompt.rs  templates.rs  vault.rs  verifier.rs
crates/abigail-core/src/vault/: crypto.rs  external.rs  mod.rs  scoped.rs  unlock.rs
crates/abigail-core/tests/: vault_stability.rs
crates/abigail-hive/: Cargo.toml
crates/abigail-hive/src/: hive.rs  lib.rs  model_registry.rs  provider_registry.rs
crates/abigail-keygen/: Cargo.toml
crates/abigail-keygen/src/: main.rs
crates/abigail-memory/: Cargo.toml
crates/abigail-memory/src/: archive.rs  backup_import.rs  embeddings.rs  graph.rs  lib.rs  postgres.rs  protected_topics.rs  schema.rs  store.rs  subscriber.rs
crates/abigail-memory/tests/: secret_topic_auto_move.rs
crates/abigail-queue/: Cargo.toml
crates/abigail-queue/src/: lib.rs  queue.rs  schema.rs  significance.rs  types.rs
crates/abigail-router/: Cargo.toml
crates/abigail-router/src/: agentic.rs  classifier.rs  conscience.rs  constraint_store.rs  council.rs  execution_state.rs  governor.rs  lib.rs  orchestration.rs  planner.rs  router.rs  subagent.rs  tier_resolver.rs
crates/abigail-router/src/monitor/: mentor_chat.rs
crates/abigail-router/src/monitors/: mentor_chat.rs  mod.rs
crates/abigail-runtime/: Cargo.toml
crates/abigail-runtime/src/: lib.rs
crates/abigail-skills/: Cargo.toml
crates/abigail-skills/src/: backup.rs  dynamic.rs  executor.rs  factory.rs  hive.rs  instruction_registry.rs  lib.rs  manifest.rs  policy.rs  preloaded.rs  prelude.rs  queue.rs  registry.rs  sandbox.rs  skill.rs  topology.rs  watcher.rs
crates/abigail-skills/src/channel/: event.rs  mod.rs
crates/abigail-skills/src/native/: postgres.rs
crates/abigail-skills/src/preloaded/: github_api.json  jira.json  slack.json
crates/abigail-skills/src/protocol/: mcp.rs
crates/abigail-skills/src/runtime/: mod.rs  wasm.rs
crates/abigail-skills/tests/: browser_persistent_auth.rs
crates/abigail-soul-crystallization/: Cargo.toml
crates/abigail-soul-crystallization/src/: engine.rs  ethics_calibrator.rs  lib.rs  models.rs
crates/abigail-streaming/: Cargo.toml
crates/abigail-streaming/src/: broker.rs  iggy_broker.rs  lib.rs  memory_broker.rs  types.rs
crates/ao-birth/: Cargo.toml
crates/ao-birth/src/: lib.rs  prompts.rs  stages.rs
crates/ao-core/: Cargo.toml
crates/ao-core/src/: config.rs  dpapi.rs  global_config.rs  keyring.rs  lib.rs  local_llm_url.rs  secrets.rs  superego.rs  system_prompt.rs  templates.rs  vault.rs  verifier.rs
crates/ao-keygen/: Cargo.toml
crates/ao-keygen/src/: main.rs
crates/ao-memory/: Cargo.toml
crates/ao-memory/src/: lib.rs  store.rs
crates/ao-router/: Cargo.toml
crates/ao-router/src/: lib.rs  router.rs
crates/daemon-client/: Cargo.toml
crates/daemon-client/src/: entity.rs  hive.rs  lib.rs
crates/entity-chat/: Cargo.toml
crates/entity-chat/src/: job_tools.rs  lib.rs
crates/entity-chat/tests/: e2e_parity.rs  live_email.rs
crates/entity-cli/: Cargo.toml
crates/entity-cli/src/: main.rs
crates/entity-cli/tests/: scaffold_discovery.rs
tauri-app/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/src/: agentic_runtime.rs  backup_ops.rs  chat_coordinator.rs  daemon_manager.rs  hive_ops.rs  identity_manager.rs  install_upgrade.rs  lib.rs  log_capture.rs  main.rs  ollama_manager.rs  probe.rs  rate_limit.rs  skill_instructions.rs  state.rs  templates.rs
tauri-app/src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tauri-app/src-ui/src/: App.tsx  browserTauriHarness.ts  index.css  main.tsx  runtimeMode.ts  vite-env.d.ts
tauri-app/src/commands/: agent.rs  agentic.rs  birth.rs  chat.rs  cli.rs  config.rs  forge.rs  identity.rs  jobs.rs  logging.rs  memory.rs  mod.rs  ollama.rs  orchestration.rs  sensory.rs  skills.rs
(+377 files in other folders)
