[workspace]
resolver = "2"
members = [
    "crates/hive-core",
    "crates/entity-core",
    "crates/hive-daemon",
    "crates/hive-cli",
    "crates/entity-daemon",
    "crates/entity-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Abigail's Mentor"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hive-core = { path = "crates/hive-core" }
entity-core = { path = "crates/entity-core" }
