[workspace]
resolver = "2"
members = [
    "crates/hive-core",
    "crates/entity-core",
    "crates/hive-daemon",
    "crates/hive-cli",
    "crates/entity-daemon",
    "crates/entity-cli",
    "crates/abigail-cli",
    "crates/abigail-core",
    "crates/abigail-auth",
    "crates/abigail-capabilities",
    "crates/abigail-hive",
    "crates/abigail-memory",
    "crates/abigail-soul-crystallization",
    "crates/soul-forge",
    "crates/abigail-birth",
    "crates/abigail-router",
    "crates/abigail-skills",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Abigail's Mentor"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "process", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
hive-core = { path = "crates/hive-core" }
entity-core = { path = "crates/entity-core" }
