[workspace]
resolver = "2"
members = [
    "crates/abigail-core",
    "crates/abigail-memory",
    "crates/abigail-capabilities",
    "crates/abigail-router",
    "crates/abigail-birth",
    "crates/abigail-soul-crystallization",
    "crates/abigail-skills",
    "crates/abigail-hive",
    "crates/abigail-auth",
    "crates/abigail-keygen",
    "crates/abigail-cli",
    "crates/soul-forge",
    "crates/abigail-identity",
    "crates/hive-core",
    "crates/entity-core",
    "crates/hive-daemon",
    "crates/entity-chat",
    "crates/entity-daemon",
    "crates/hive-cli",
    "crates/entity-cli",
    "crates/abigail-streaming",
    "crates/abigail-queue",
    "skills/skill-web-search",
    "skills/skill-filesystem",
    "skills/skill-shell",
    "skills/skill-http",
    "skills/skill-perplexity-search",
    "skills/skill-knowledge-base",
    "skills/skill-git",
    "skills/skill-code-analysis",
    "skills/skill-database",
    "skills/skill-calendar",
    "skills/skill-document",
    "skills/skill-notification",
    "skills/skill-image",
    "skills/skill-clipboard",
    "skills/skill-system-monitor",
    "tauri-app",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Abigail's Mentor"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "process", "signal"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
directories = "6"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
abigail-auth = { path = "crates/abigail-auth" }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
hive-core = { path = "crates/hive-core" }
entity-core = { path = "crates/entity-core" }
entity-chat = { path = "crates/entity-chat" }
abigail-identity = { path = "crates/abigail-identity" }
