[package]
name = "abigail-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
abigail-core = { path = "../crates/abigail-core" }
anyhow = "1"
base64 = "0.21"
ed25519-dalek.workspace = true
abigail-memory = { path = "../crates/abigail-memory" }
abigail-capabilities = { path = "../crates/abigail-capabilities" }
abigail-router = { path = "../crates/abigail-router" }
abigail-birth = { path = "../crates/abigail-birth" }
abigail-soul-crystallization = { path = "../crates/abigail-soul-crystallization" }
abigail-skills = { path = "../crates/abigail-skills" }
soul-forge = { path = "../crates/soul-forge" }
skill-web-search = { path = "../skills/skill-web-search" }
skill-filesystem = { path = "../skills/skill-filesystem" }
skill-shell = { path = "../skills/skill-shell" }
skill-http = { path = "../skills/skill-http" }
skill-perplexity-search = { path = "../skills/skill-perplexity-search" }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
chrono.workspace = true
uuid.workspace = true
which = "7"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
