[package]
name = "abigail-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
abigail-core = { path = "../crates/abigail-core" }
anyhow = "1"
base64.workspace = true
ed25519-dalek.workspace = true
abigail-memory = { path = "../crates/abigail-memory" }
abigail-capabilities = { path = "../crates/abigail-capabilities" }
abigail-router = { path = "../crates/abigail-router" }
abigail-hive = { path = "../crates/abigail-hive" }
abigail-birth = { path = "../crates/abigail-birth" }
abigail-soul-crystallization = { path = "../crates/abigail-soul-crystallization" }
abigail-skills = { path = "../crates/abigail-skills" }
entity-core = { path = "../crates/entity-core" }
entity-chat = { path = "../crates/entity-chat" }
abigail-auth = { path = "../crates/abigail-auth" }
abigail-identity = { path = "../crates/abigail-identity" }
abigail-cli = { path = "../crates/abigail-cli" }
soul-forge = { path = "../crates/soul-forge" }
skill-web-search = { path = "../skills/skill-web-search" }
skill-filesystem = { path = "../skills/skill-filesystem" }
skill-shell = { path = "../skills/skill-shell" }
skill-http = { path = "../skills/skill-http" }
skill-perplexity-search = { path = "../skills/skill-perplexity-search" }
skill-knowledge-base = { path = "../skills/skill-knowledge-base" }
skill-git = { path = "../skills/skill-git" }
skill-code-analysis = { path = "../skills/skill-code-analysis" }
skill-database = { path = "../skills/skill-database" }
skill-calendar = { path = "../skills/skill-calendar" }
skill-document = { path = "../skills/skill-document" }
skill-notification = { path = "../skills/skill-notification" }
skill-image = { path = "../skills/skill-image" }
skill-clipboard = { path = "../skills/skill-clipboard" }
skill-system-monitor = { path = "../skills/skill-system-monitor" }
skill-email = { path = "../skills/skill-email" }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
async-trait = "0.1"
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
regex = "1"
chrono.workspace = true
uuid.workspace = true
which = "7"
axum = "0.7"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
