[package]
name = "abigail-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
abigail-core = { path = "../crates/abigail-core" }
anyhow = "1"
base64.workspace = true
ed25519-dalek.workspace = true
abigail-memory = { path = "../crates/abigail-memory" }
abigail-capabilities = { path = "../crates/abigail-capabilities" }
abigail-router = { path = "../crates/abigail-router" }
abigail-hive = { path = "../crates/abigail-hive" }
abigail-birth = { path = "../crates/abigail-birth" }
abigail-soul-crystallization = { path = "../crates/abigail-soul-crystallization" }
abigail-skills = { path = "../crates/abigail-skills" }
abigail-runtime = { path = "../crates/abigail-runtime" }
entity-core = { path = "../crates/entity-core" }
entity-chat = { path = "../crates/entity-chat" }
abigail-auth = { path = "../crates/abigail-auth" }
abigail-identity = { path = "../crates/abigail-identity" }
abigail-cli = { path = "../crates/abigail-cli" }
soul-forge = { path = "../crates/soul-forge" }
skill-browser = { path = "../skills/skill-browser" }
abigail-queue = { path = "../crates/abigail-queue" }
abigail-streaming = { path = "../crates/abigail-streaming" }
daemon-client = { path = "../crates/daemon-client" }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
async-trait = "0.1"
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
regex = "1"
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
which = "7"
directories.workspace = true
axum = "0.7"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
rand.workspace = true
