[package]
name = "abby-birth"
version.workspace = true
edition.workspace = true

[dependencies]
abby-core = { path = "../abby-core" }
abby-memory = { path = "../abby-memory" }
abby-capabilities = { path = "../abby-capabilities" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
