[package]
name = "abby-keygen"
version.workspace = true
edition.workspace = true

[[bin]]
name = "abby-keygen"
path = "src/main.rs"

[dependencies]
abby-core = { path = "../abby-core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
directories = "5.0"
