[package]
name = "abby-llm"
version.workspace = true
edition.workspace = true

[dependencies]
abby-core = { path = "../abby-core" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-openai = "0.18"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
