[package]
name = "abby-memory"
version.workspace = true
edition.workspace = true

[dependencies]
abby-core = { path = "../abby-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
