[package]
name = "abby-skills"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
