[package]
name = "abby-skills"
version.workspace = true
edition.workspace = true

[dependencies]
abby-core = { path = "../abby-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
async-imap = "0.9"
async-native-tls = "0.5"
futures-util = "0.3"
tokio-util.workspace = true
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
mail-parser = "0.9"
