[package]
name = "abigail-birth"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-memory = { path = "../abigail-memory" }
abigail-capabilities = { path = "../abigail-capabilities" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
