[package]
name = "abigail-capabilities"
version.workspace = true
edition.workspace = true

[features]
default = ["browser"]
browser = ["dep:chromiumoxide"]

[dependencies]
abigail-core = { path = "../abigail-core" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
url = "2.5"
base64.workspace = true
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false, optional = true }
futures-util = "0.3"
