[package]
name = "abigail-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "abigail-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-skills = { path = "../abigail-skills" }
abigail-router = { path = "../abigail-router" }
abigail-capabilities = { path = "../abigail-capabilities" }
entity-core = { path = "../entity-core" }
entity-chat = { path = "../entity-chat" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
