[package]
name = "abigail-core"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
regex = "1"
tokio.workspace = true
directories = "6.0"
url = "2.5"
reqwest.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hkdf = "0.12"
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }
