[package]
name = "abigail-memory"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
async-trait = { workspace = true, optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = []
postgres = ["sqlx", "tokio", "async-trait", "reqwest"]
