[package]
name = "abigail-memory"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-streaming = { path = "../abigail-streaming" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
directories.workspace = true
tokio = { workspace = true, optional = true }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
async-trait = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
postgres = ["sqlx", "tokio", "async-trait", "reqwest"]
