[package]
name = "abigail-router"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-capabilities = { path = "../abigail-capabilities" }
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-util.workspace = true
