[package]
name = "abigail-skills"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-auth = { path = "../abigail-auth" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
async-imap = "0.11"
async-native-tls = "0.6"
native-tls = "0.2"
futures-util = "0.3"
tokio-util.workspace = true
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
mail-parser = "0.11"
notify = { version = "8", features = ["macos_fsevent"] }
reqwest.workspace = true
url = "2"
