[package]
name = "abigail-skills"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-auth = { path = "../abigail-auth" }
abigail-queue = { path = "../abigail-queue" }
abigail-streaming = { path = "../abigail-streaming" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = "0.8"
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
tokio-util.workspace = true
notify = { version = "8", features = ["macos_fsevent"] }
reqwest.workspace = true
url = "2"
rand.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
playwright-rs = "0.8.4"

[dev-dependencies]
axum.workspace = true
skill-browser = { path = "../../skills/skill-browser" }
tempfile = "3"
