[package]
name = "abigail-soul-crystallization"
version.workspace = true
edition.workspace = true

[dependencies]
abigail-core = { path = "../abigail-core" }
abigail-memory = { path = "../abigail-memory" }
abigail-capabilities = { path = "../abigail-capabilities" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
