[package]
name = "abigail-streaming"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-util.workspace = true
