[package]
name = "ao-core"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
directories = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }
