[package]
name = "ao-keygen"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ao-keygen"
path = "src/main.rs"

[dependencies]
ao-core = { path = "../ao-core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
directories = "5.0"
