[package]
name = "ao-memory"
version.workspace = true
edition.workspace = true

[dependencies]
ao-core = { path = "../ao-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
