[package]
name = "entity-chat"
version.workspace = true
edition.workspace = true

[dependencies]
entity-core = { path = "../entity-core" }
abigail-core = { path = "../abigail-core" }
abigail-memory = { path = "../abigail-memory" }
abigail-capabilities = { path = "../abigail-capabilities" }
abigail-router = { path = "../abigail-router" }
abigail-skills = { path = "../abigail-skills" }
abigail-queue = { path = "../abigail-queue" }
cron = "0.15"
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
abigail-core = { path = "../abigail-core" }
skill-email = { path = "../../skills/skill-email" }
